# Speaker-Aware-Transcription-Pipeline

./: .env.example  .gitignore  01_vad_segmentation.ipynb  02_embeddings.ipynb  03_clustering.ipynb  04_asr.ipynb  05_integration.ipynb  06_evaluation.ipynb  07_embedding_finetune.ipynb  08_clustering-on-finetunned_embeding.ipynb  ReadMe.md  main.py  meeting-transcription.ipynb  pyproject.toml
