[project]
name = "speech-meeting-transcriptin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "silero-vad>=6.2.1",
    "soundfile>=0.14.0",
    "speechbrain>=1.1.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "umap-learn>=0.5.12",
]
